--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "really-whips",
   "displayName": "really-whips",
-  "description": "VSCode extension with tiny wrapper to interact with the Alpaca language model. It really whips the LLaMA's ass!",
+  "description": "VSCode extension with a tiny wrapper to interact with the Alpaca language model. It really whips the LLaMA's ass!",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.77.0"
