--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "really-whips",
   "description": "VSCode extension with a tiny wrapper to interact with the Alpaca language model. It really whips the LLaMA's ass!",
   "version": "0.0.1",
+  "repository": "github:codealchemist/really-whips",
   "engines": {
     "vscode": "^1.77.0"
   },
