--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "really-whips",
   "publisher": "AlbertoMiranda",
   "displayName": "really-whips",
+  "icon": "logo.png",
   "description": "VSCode extension with a tiny wrapper to interact with the Alpaca language model. It really whips the LLaMA's ass!",
   "version": "1.0.0",
   "repository": "github:codealchemist/really-whips",
